# OpenEAW

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: check-clang-tidy.yml  check-conventional-commits.yml  main.yml
khepri/: .clang-format  CMakeLists.txt
khepri/include/khepri/: exceptions.hpp  version_info.hpp
khepri/include/khepri/adapters/: ui_renderer.hpp  window_input.hpp
khepri/include/khepri/application/: console_logger.hpp  current_directory.hpp  exceptions.hpp  platform.hpp  window.hpp
khepri/include/khepri/font/: font_cache.hpp  font_face.hpp
khepri/include/khepri/game/: rts_camera.hpp
khepri/include/khepri/io/: container_stream.hpp  exceptions.hpp  file.hpp  serialize.hpp  stream.hpp
khepri/include/khepri/log/: log.hpp
khepri/include/khepri/math/: bits.hpp  color_rgb.hpp  color_rgba.hpp  color_srgb.hpp  color_srgba.hpp  constraint.hpp  format.hpp  frustum.hpp  interpolator.hpp  ios.hpp  math.hpp  matrix.hpp  plane.hpp  point.hpp  polynomial.hpp  quaternion.hpp  range.hpp  ray.hpp  rect.hpp  serialize.hpp  size.hpp  sphere.hpp  spline.hpp  vector2.hpp  vector3.hpp  vector4.hpp
khepri/include/khepri/renderer/: camera.hpp  exceptions.hpp  light_desc.hpp  material.hpp  material_desc.hpp  mesh.hpp  mesh_instance.hpp  render_pipeline.hpp  render_pipeline_desc.hpp  renderer.hpp  shader.hpp  texture.hpp  texture_desc.hpp
khepri/include/khepri/renderer/diligent/: renderer.hpp
khepri/include/khepri/renderer/io/: serialize.hpp  texture.hpp
khepri/include/khepri/scene/: behavior.hpp  scene.hpp  scene_object.hpp
khepri/include/khepri/ui/: align.hpp  button.hpp  canvas.hpp  checkbox.hpp  events.hpp  frame.hpp  image.hpp  label.hpp  layout.hpp  listbox.hpp  radio_button.hpp  radio_group.hpp  renderer.hpp  scroll_panel.hpp  scrollbar.hpp  widget.hpp
khepri/include/khepri/utility/: crc.hpp  crc32.hpp  enum.hpp  functional.hpp  platform.hpp  signal.hpp  smooth.hpp  string.hpp  type_traits.hpp
khepri/src/adapters/: ui_renderer.cpp  window_input.cpp
khepri/src/application/: console_logger.cpp  current_directory.cpp  exceptions.cpp  platform.cpp  window.cpp
khepri/src/font/: font.cpp  font_face.cpp  font_face_state.cpp  font_face_state.hpp
khepri/src/game/: rts_camera.cpp
khepri/src/io/: container_stream.cpp  file.cpp  stream.cpp
khepri/src/log/: log.cpp
khepri/src/math/: interpolator.cpp  polynomial.cpp  spline.cpp
khepri/src/physics/: collision_mesh.cpp
khepri/src/renderer/: camera.cpp  model.cpp  texture_desc.cpp
khepri/src/renderer/diligent/: native_window.cpp  native_window.hpp  refcnt_ptr.hpp  renderer.cpp  shader_stream_factory.hpp
khepri/src/renderer/io/: texture.cpp  texture_dds.cpp  texture_tga.cpp
khepri/src/ui/: canvas.cpp  widget.cpp
khepri/src/utility/: crc.cpp  platform.cpp  string.cpp
khepri/tests/: cubic_spline_test.cpp  interpolator_test.cpp  matchers.hpp  matrix_test.cpp  polynomial_test.cpp  quaternion_test.cpp
khepri/tools/dae2kmf/src/: main.cpp
openglyph/: .clang-format  CMakeLists.txt
openglyph/include/openglyph/assets/: asset_cache.hpp  asset_layer.hpp  asset_loader.hpp  map.hpp
openglyph/include/openglyph/assets/io/: map.hpp
openglyph/include/openglyph/game/: environment.hpp  game_object_type.hpp  game_object_type_store.hpp  scene.hpp  scene_renderer.hpp  tactical_camera.hpp  tactical_camera_store.hpp
openglyph/include/openglyph/game/behaviors/: marker_behavior.hpp  render_behavior.hpp
openglyph/include/openglyph/io/: chunk_reader.hpp  mega_file.hpp  mega_filesystem.hpp  path_manager.hpp
openglyph/include/openglyph/parser/: parsers.hpp  xml_parser.hpp
openglyph/include/openglyph/renderer/: billboard.hpp  material_desc.hpp  material_store.hpp  model.hpp  model_creator.hpp  render_model.hpp  render_pipeline_store.hpp
openglyph/include/openglyph/renderer/io/: material.hpp  model.hpp  render_pipeline.hpp
openglyph/include/openglyph/steam/: steam.hpp  steam_paths.hpp
openglyph/include/openglyph/ui/: input.hpp
openglyph/include/openglyph/utility/: steam_paths.hpp
openglyph/src/assets/: asset_cache.cpp  asset_layer.cpp  asset_loader.cpp
openglyph/src/assets/io/: map.cpp
openglyph/src/game/: game_object_type_store.cpp  scene.cpp  scene_renderer.cpp  tactical_camera_store.cpp
openglyph/src/io/: chunk_reader.cpp  mega_file.cpp  mega_filesystem.cpp
openglyph/src/parser/: parsers.cpp  xml_parser.cpp
openglyph/src/renderer/: material_store.cpp  model_creator.cpp  render_pipeline_store.cpp
openglyph/src/renderer/io/: graphics_pipeline_options.cpp  graphics_pipeline_options.hpp  material.cpp  model.cpp  render_pipeline.cpp
openglyph/src/steam/: steam.cpp  steam_paths.cpp
openglyph/src/ui/: input.cpp
openglyph/src/utility/: steam_paths.cpp  vdf_fileparser.hpp
src/: main.cpp  version.cpp  version.hpp
src/io/: path_manager.cpp  (+1 more)
(+15 files in other folders)
